<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bglogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35sp"
        android:layout_marginTop="80dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:gravity="center"
            android:text="@string/comeBack"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:gravity="center"
            android:text="@string/project"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35sp"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titilliumwebregular"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:background="@drawable/inputforms_corner"
                android:alpha="0.5"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titilliumwebregular"
                android:layout_marginTop="50dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/promt_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:background="@drawable/inputforms_corner"
                android:alpha="0.5"
                android:paddingLeft="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/sign_in"
                android:layout_width="192dp"
                android:layout_height="52dp"
                android:background="@drawable/buttonwhite_corner"
                android:fontFamily="@font/josefinsanslight"
                android:hint="@string/next"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titilliumwebregular"
                android:layout_marginTop="50dp"
                android:text="Don't have an account?"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center"/>
        </LinearLayout>






    </LinearLayout>





</RelativeLayout>