<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:id="@+id/MainContainer">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bgwellcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:gravity="center"
            android:text="@string/wellcome"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:gravity="center"
            android:text="@string/project"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/reg_main"
            android:layout_width="192dp"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonwhite_corner"
            android:fontFamily="@font/josefinsanslight"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="register" />

        <Button
            android:id="@+id/sign_in_main"
            android:layout_width="192dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/josefinsanslight"
            android:onClick="login"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>