<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDetailActivity">

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/detail_product" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:onClick="backtohome"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        android:padding="35sp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gideon_roman"
            android:text="@string/productDetailName"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <!--    Conc choice and price row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/product_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gideon_roman"
                android:text="@string/productCategoryName"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/buttonred_corner"
                android:padding="10dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gideon_roman"
                android:text="@string/productPrice"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"
                android:gravity="end"/>
        </LinearLayout>

        <!--    Description-->
        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gideon_roman"
            android:text="@string/Lorem"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:layout_marginTop="30dp"/>

        <!--  Color  -->
        <TextView
            android:id="@+id/product_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gideon_roman"
            android:text="Color:"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/product_details_color" />

    </LinearLayout>








</RelativeLayout>